fix color header admin page

--- a/front-end/admin/src/common/AppHeader.css
+++ b/front-end/admin/src/common/AppHeader.css
@@ -78,7 +78,7 @@
     margin: 0 -15px;
   }
 }  
-#customheader .ant-menu-item,.ant-menu-submenu{
+#customheader .ant-menu-item,#customheader .ant-menu-submenu{
   
   background-color: #2208af78  !important;
 
