update Author in front end admin

--- a/front-end/admin/src/author/Author.css
+++ b/front-end/admin/src/author/Author.css
@@ -2,13 +2,12 @@
     position: absolute;
     font-size: 12px;
     margin-top: -4px;
-  }
-
-.main{
-    padding: 0px 20px 0px 20px;
 }
 
-.title{
-    padding-top: 10px;
-    padding-bottom: 10px; 
+.mr-15 {
+    margin: 15px;
+}
+
+.pd-10 {
+    padding: 10px;
 }
