--- a/front-end/musicapp-pulse/src/App.css
+++ b/front-end/musicapp-pulse/src/App.css
@@ -7,6 +7,25 @@
   height: 40vmin;
   pointer-events: none;
 }
+#variants{
+  height: 50%;
+  width: 23%;
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+}
+#variants button {
+  height: 50px;
+  width: 50px;
+  background-color: inherit;
+  border: none;
+  font-size: 30px;
+  border: 1px dashed gray;
+  cursor: pointer;
+  outline: none;
+}
 
 .App-header {
   background-color: #282c34;
